--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -35,3 +35,23 @@
   transition: all 0.5s ease-in-out;
   transform: scale(1.05);
 }
+
+.services {
+  background: url("../images/bg.jpg") no-repeat center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.services::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.services .container {
+  z-index: 10;
+}
