--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -55,3 +55,24 @@
 .services .container {
   z-index: 10;
 }
+
+@media (max-width: 767px) {
+  .header .social i {
+    font-size: 30px;
+  }
+
+  .header .roles {
+    font-size: 18px !important;
+  }
+
+  .about-content {
+    flex-direction: column;
+  }
+
+  .stats .stat {
+    margin-bottom: 40px;
+    padding-bottom: 20px;
+    border-right: 0 !important;
+    border-bottom: var(--bs-dark) solid 1px;
+  }
+}
